Bug 373589: fix crash [@ nsPresContext::DefaultLinkColor] trying to get link color for <body> that has been removed from the document, which was a regression from the patch for bug 372971, patch by Taras Glek <tglek@mozilla.com>, r+sr=roc